include a test to verify that an explicitly specified --endian value which matches the target platform's endianness, creates the image correctly